fixed line art images on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1119,9 +1119,6 @@ img {
     width: auto;
     box-shadow: none;
   }
-  .casestudy-main .casestudy-project-overview .casestudy-lineart {
-    max-width: fit-content;
-  }
   .casestudy-main .casestudy-project-overview .casestudy-lineart img {
     object-fit: cover;
   }
