--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -124,7 +124,7 @@ img {
         .casestudy-project-overview {
 
             .casestudy-lineart {
-                max-width: fit-content;
+                // max-width: fit-content;
 
                 img {
                     object-fit: cover;
